--- a/Taller2/P1-4.ipynb
+++ b/Taller2/P1-4.ipynb
@@ -25,6 +25,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a2b4c4b",
+   "metadata": {},
+   "source": [
+    "$$D^{2}f(x_n)=\\frac{1}{4h^{2}}\\sum_{m=-2}^{2}{M[m + 2]f(x_{n−m}).}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "54d0110c",
