--- a/Taller3/Punto2-4.ipynb
+++ b/Taller3/Punto2-4.ipynb
@@ -27,9 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0% [                                                                                    ]  0 / 73\r",
-      "100% [....................................................................................] 73 / 73"
+      "--File found---\n"
      ]
     }
    ],
@@ -155,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x25c7b8a71f0>]"
+       "[<matplotlib.lines.Line2D at 0x206f433c820>]"
       ]
      },
      "execution_count": 6,
@@ -183,6 +181,25 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "5cadad9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x= sym.Symbol(\"x\")\n",
+    "f = Poly(x,X,Y).expand()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d051fcc1",
+   "metadata": {},
+   "source": [
+    "$$y(x)= y_o + tan\\theta x -\\frac{1}{2}\\frac{g}{V^2_{ox}}x^2$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "298d3d7f",
    "metadata": {},
    "outputs": [
@@ -195,23 +212,13 @@
        "-0.0554912422401579*x**2 + 0.363970234266202*x + 2.77555756156289e-17"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x= sym.Symbol(\"x\")\n",
-    "f = Poly(x,X,Y).expand()\n",
     "f"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9ab906f",
-   "metadata": {},
-   "source": [
-    "$$y(x)= y_o + tan\\theta x -\\frac{1}{2}\\frac{g}{V^2_{ox}}x^2$$"
    ]
   },
   {
@@ -219,12 +226,18 @@
    "id": "1351d53a",
    "metadata": {},
    "source": [
-    "$$tan\\theta x = 0.363970234266202𝑥$$"
+    "Por tanto:\n",
+    "$$$$\n",
+    "$$tan\\theta x = 0.363970234266202𝑥$$\n",
+    "$$$$\n",
+    "$$tan\\theta= 0.363970234266202$$\n",
+    "$$$$\n",
+    "$$\\theta= arctan(0.363970234266202)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a72984d5",
    "metadata": {},
    "outputs": [],
@@ -234,14 +247,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72255dcc",
+   "metadata": {},
+   "source": [
+    "$$-0.0554912422401579𝑥^2=-\\frac{1}{2}\\frac{g}{V^2_{ox}}x^2$$\n",
+    "$$$$\n",
+    "$$0.0554912422401579=\\frac{g}{2*V^2_{ox}}$$\n",
+    "$$$$\n",
+    "$$V^2_{ox}=\\frac{g}{2*0.0554912422401579}$$\n",
+    "$$$$\n",
+    "$$V_{ox}=\\sqrt{\\frac{g}{2*0.0554912422401579}}$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2ddc7880",
    "metadata": {},
    "outputs": [],
    "source": [
     "g=9.8\n",
-    "Vox= abs((g/(2*-0.0554912422401579)))**0.5"
+    "Vox= (g/(2*0.0554912422401579))**0.5"
    ]
   },
   {
@@ -254,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c69e896b",
    "metadata": {},
    "outputs": [],
@@ -264,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5c022bfc",
    "metadata": {},
    "outputs": [
