--- a/Taller3/Punto2-5.ipynb
+++ b/Taller3/Punto2-5.ipynb
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rc\n",
     "import pandas as pd\n",
-    "import  sympy as sym\n",
+    "import sympy as sym\n",
     "import os.path as path\n",
     "import wget"
    ]
@@ -26,36 +26,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0% [                                                                                    ]  0 / 41\r",
-      "100% [....................................................................................] 41 / 41"
+      "--File found---\n"
      ]
     }
    ],
    "source": [
-    "file = 'netwongregory.csv'\n",
-    "url = 'https://raw.githubusercontent.com/asegura4488/Database/main/MetodosComputacionalesReforma/InterpolacionNewtonNoequi.csv'\n",
+    "file= 'netwongregory.csv'\n",
+    "url= 'https://raw.githubusercontent.com/asegura4488/Database/main/MetodosComputacionalesReforma/InterpolacionNewtonNoequi.csv'\n",
     "if not path.exists(file):\n",
-    "    Path_ = wget.download(url,file)\n",
+    "    Path_= wget.download(url,file)\n",
     "else:\n",
     "    print('--File found---')\n",
-    "    Path_ = file"
+    "    Path_= file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "67e70c26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Data = pd.read_csv(Path_,sep=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "fe8ae008",
    "metadata": {},
    "outputs": [
     {
@@ -128,51 +116,51 @@
        "5  5.9  10"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "Data= pd.read_csv(Path_,sep=',')\n",
     "Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "be548265",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.float64(Data['X'])\n",
-    "Y = np.float64(Data['Y'])"
+    "X= np.float64(Data['X'])\n",
+    "Y= np.float64(Data['Y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f4f03b69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def newton_gregory(X, Y, x):\n",
+    "    y= Y.copy()\n",
+    "    for i in range(1, len(X)):\n",
+    "        for j in range(len(X)-1,i-1,-1):\n",
+    "            y[j] = (y[j] - y[j-1]) / (X[j] - X[j-i])\n",
+    "    p= y[-1]\n",
+    "    for i in range(len(X)-2,-1,-1):\n",
+    "        p= p*(x - X[i])+y[i]\n",
+    "    return p\n",
+    "    \n",
+    "x= np.linspace(np.min(X), np.max(X),100)\n",
+    "y= newton_gregory(X,Y,x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4f03b69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gregory_newton_interpolation(x, Y, x0):\n",
-    "    n = len(x)\n",
-    "    y= Y.copy()\n",
-    "    for i in range(1, n):\n",
-    "        for j in range(n - 1, i - 1, -1):\n",
-    "            y[j] = (y[j] - y[j - 1]) / (x[j] - x[j - i])\n",
-    "    p = y[n - 1]\n",
-    "    for i in range(n - 2, -1, -1):\n",
-    "        p = p * (x0 - x[i]) + y[i]\n",
-    "    return p\n",
-    "    \n",
-    "x= np.linspace(np.min(X), np.max(X),100)\n",
-    "y= gregory_newton_interpolation(X,Y,x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "ed9b8727",
    "metadata": {},
    "outputs": [
@@ -188,10 +176,10 @@
     }
    ],
    "source": [
-    "fig=plt.figure()\n",
+    "fig= plt.figure()\n",
     "ax= fig.add_subplot(1,1,1)\n",
     "ax.plot(x,y, \"b\")\n",
-    "ax.scatter(X,Y, color=\"r\")\n",
+    "ax.scatter(X,Y, color= \"r\")\n",
     "ax.set_title(\"Interpolación por método Newton-Gregory\")\n",
     "ax.legend([\"Inteporlación\",\"Data\"])\n",
     "plt.show()"
@@ -199,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "40f4cd90",
    "metadata": {},
    "outputs": [
@@ -212,14 +200,14 @@
        "-0.34145435774264*x**5 + 5.84804869821673*x**4 - 35.6998197753506*x**3 + 89.657566164176*x**2 - 68.8369730888011*x - 18.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x= sym.Symbol(\"x\", Real=\"True\")\n",
-    "f=gregory_newton_interpolation(X,Y,x).expand()\n",
+    "f= newton_gregory(X,Y,x).expand()\n",
     "f"
    ]
   }
