--- a/Taller4/Punto9.ipynb
+++ b/Taller4/Punto9.ipynb
@@ -3,61 +3,50 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6852332",
+   "id": "fb06cd03",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from tqdm import tqdm"
+    "import sympy as sym"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "88fa7b7d",
+   "id": "2b2ceb9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Simpson3_8(limi,lims,f,n=9999999):\n",
-    "    intervalo=(lims-limi)/n\n",
-    "    suma=f(limi)+f(lims)\n",
-    "    for i in tqdm(range(1, n)):\n",
-    "        if i%3==0:\n",
-    "            suma+=2*f(limi+i*intervalo)\n",
-    "        else:\n",
-    "            suma+=3*f(limi+i*intervalo)\n",
-    "    return 3/8*intervalo*suma"
+    "x= sym.Symbol(\"x\")\n",
+    "h= sym.Symbol(\"h\")\n",
+    "f4= sym.Symbol(\"f^(4)ξ\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "27f35283",
+   "id": "f43307d3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████| 9999998/9999998 [00:41<00:00, 241138.02it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "funcion= lambda x: np.sqrt(1+np.exp(-x**2))\n",
-    "integral= Simpson3_8(-1,1,funcion)"
+    "fun= (x)*(x - h)*(x - 2*h)*(x - 3*h)\n",
+    "integral=sym.integrate(fun,(x,0,3*h))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f095b70a",
+   "id": "b32b5249",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{3 f^{(4)ξ} h^{5}}{80}$"
+      ],
       "text/plain": [
-       "2.6388571169084467"
+       "-3*f^(4)ξ*h**5/80"
       ]
      },
      "execution_count": 4,
@@ -66,7 +55,8 @@
     }
    ],
    "source": [
-    "integral"
+    "E=f4/np.math.factorial(4)*integral\n",
+    "E"
    ]
   }
  ],
