--- a/Taller6/Punto6.ipynb
+++ b/Taller6/Punto6.ipynb
@@ -315,7 +315,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.49814468, -0.1996059 , -0.52882598])"
+       "(array([ 0.49814468, -0.1996059 , -0.52882598]), 8536)"
       ]
      },
      "execution_count": 15,
@@ -324,7 +324,7 @@
     }
    ],
    "source": [
-    "xsol"
+    "xsol,it"
    ]
   }
  ],
